Outputting result correctly

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="entire_margin">10dp</dimen>
+    <dimen name="text_size">24sp</dimen>
+    <dimen name="margin_around_view">8dp</dimen>
 </resources>
