--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,8 +28,8 @@
         android:id="@+id/unscramble_word_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginEnd="@dimen/margin_around_view"
+        android:layout_marginRight="@dimen/margin_around_view"
         android:text="@string/unscramble"
         app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
@@ -38,11 +38,13 @@
         android:id="@+id/result_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="@dimen/margin_around_view"
         android:gravity="center"
-        tools:text="@tools:sample/lorem"
+        android:textSize="@dimen/text_size"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/unscramble_word_button"
         app:layout_constraintStart_toStartOf="@+id/unscramble_word_button"
-        app:layout_constraintTop_toBottomOf="@+id/unscramble_word_button" />
+        app:layout_constraintTop_toBottomOf="@+id/unscramble_word_button"
+        tools:text="@tools:sample/lorem" />
 
 </android.support.constraint.ConstraintLayout>
